samples/_failures_safe/1761710582_ef730b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86aca751.c: In function ‘main’:
./samples/SAFE/__tmp_86aca751.c:169:15: error: expected ‘)’ at end of input
  169 |     if (!stack
      |        ~      ^
      |               )
./samples/SAFE/__tmp_86aca751.c:169:5: error: expected declaration or statement at end of input
  169 |     if (!stack
      |     ^~
